[gd_scene load_steps=5 format=3 uid="uid://p4d1w0p1esp1"]

[ext_resource type="Script" path="res://Scripts/bullet.gd" id="1_xjxei"]
[ext_resource type="Texture2D" uid="uid://cbbhsak0c8nyu" path="res://Assets/projectile.png" id="2_l14fb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v2y3a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2fqtb"]
radius = 95.0

[node name="pistol_bullet" type="Area2D"]
show_behind_parent = true
top_level = true
z_index = -2
collision_layer = 0
collision_mask = 6
script = ExtResource("1_xjxei")

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_l14fb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 0)
scale = Vector2(0.848921, 0.848921)
shape = SubResource("CircleShape2D_v2y3a")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-26, 0)
scale = Vector2(0.2, 0.5)

[node name="aoe_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="aoe_collision" type="CollisionShape2D" parent="aoe_area"]
position = Vector2(5, 0)
shape = SubResource("CircleShape2D_2fqtb")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="aoe_area" to="." method="_on_aoe_area_body_entered"]
[connection signal="body_exited" from="aoe_area" to="." method="_on_aoe_area_body_exited"]
